# substrate-node-zero

./: .gitignore  Makefile  README.md
.note/: Analyze.md  Boot.md  Setup.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/case-crowdfund/: Cargo.toml
pallets/case-crowdfund/src/: lib.rs
pallets/combine/: Cargo.toml
pallets/combine/src/: lib.rs  tests.rs
pallets/simple/: Cargo.toml
pallets/simple/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/template/src/example/: mod.rs  ringbuffer.rs  ringbuffer_impl.rs  set.rs
pallets/zero/: Cargo.toml
pallets/zero/src/: lib.rs  tests.rs
pallets/zero/src/demo/: mod.rs  store_struct.rs  token.rs  total.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  multiaddress.rs
scripts/: init.sh
