[package]
name = 'runtime'
version = '2.0.1'
authors = ["wangliqiu <wangviviying@163.com>"]
edition = '2018'
license = 'Unlicense'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '3.0.0'


[dependencies]
parity-scale-codec = { version = '1.3.4', features = ['derive'], default-features = false }

hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

##################################### Local Dependencies #####################################
pallet-template = { path = '../pallets/template', default-features = false, version = '2.0.1' }
pallet-zero = { path = '../pallets/zero', default-features = false, version = '2.0.1' }

##################################### Substrate Dependencies #####################################
# frame
frame-benchmarking = { default-features = false, optional = true, version = '2.0.1' }
frame-executive = { default-features = false, version = '2.0.1' }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.1' }
frame-system-rpc-runtime-api = { default-features = false, version = '2.0.1' }
# pallet
pallet-aura = { default-features = false, version = '2.0.1' }
pallet-balances = { default-features = false, version = '2.0.1' }
pallet-grandpa = { default-features = false, version = '2.0.1' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.1' }
pallet-sudo = { default-features = false, version = '2.0.1' }
pallet-timestamp = { default-features = false, version = '2.0.1' }
pallet-transaction-payment = { default-features = false, version = '2.0.1' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.1' }
# sp
sp-api = { default-features = false, version = '2.0.1' }
sp-block-builder = { default-features = false, version = '2.0.1' }
sp-consensus-aura = { default-features = false, version = '0.8.1' }
sp-core = { default-features = false, version = '2.0.1' }
sp-inherents = { default-features = false, version = '2.0.1' }
sp-offchain = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
sp-session = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
sp-transaction-pool = { default-features = false, version = '2.0.1' }
sp-version = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'parity-scale-codec/std',
    'serde',
    # local pallet
    'pallet-template/std',
    'pallet-zero/std',
    # frame
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    # pallet
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    # sp
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
