[package]
name = "pallet-case-crowdfund"
version = '2.0.1'
authors = ["wangliqiu <wangviviying@163.com>"]
edition = '2018'
license = 'Unlicense'


[dependencies]
parity-scale-codec = { version = '1.3.4', features = ['derive'], default-features = false }

##################################### Substrate Dependencies #####################################
frame-support = { version = '2.0.1', default-features = false }
frame-system = { version = '2.0.1', default-features = false }
sp-runtime = { version = '2.0.1', default-features = false }
sp-core = { version = '2.0.1', default-features = false }
sp-std = { version = '2.0.1', default-features = false }
sp-storage = { version = '2.0.1', default-features = false }
balances = { package = 'pallet-balances', version = '2.0.1', default-features = false }


[dev-dependencies]
sp-core = { version = '2.0.1', default-features = false }
sp-io = { version = '2.0.1', default-features = false }

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-storage/std',
    'balances/std',
]
