[package]
name = "pallet-combine"
version = '2.0.1'
authors = ["wangliqiu <wangviviying@163.com>"]
edition = '2018'
license = 'Unlicense'


[dependencies]
parity-scale-codec = { version = '1.3.4', features = ['derive'], default-features = false }

##################################### Substrate Dependencies #####################################
frame-support = { version = '2.0.1', default-features = false }
frame-system = { version = '2.0.1', default-features = false }
sp-runtime = { version = '2.0.1', default-features = false }

[dev-dependencies]
sp-core = { version = '2.0.1', default-features = false }
sp-io = { version = '2.0.1', default-features = false }

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'parity-scale-codec/std',
    'sp-runtime/std',
]
