[package]
name = 'pallet-template'
version = '2.0.1'
authors = ["wangliqiu <wangviviying@163.com>"]
edition = '2018'
license = 'Unlicense'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
parity-scale-codec = { version = '1.3.4', features = ['derive'], default-features = false }

##################################### Substrate Dependencies #####################################
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
]
